name: Moof
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: LGPL-3
license-file: LICENSE
maintainer: micmath@udel.edu
synopsis: A toy language hopefully to have structured typing
description:  
category: Language
author: mmath10
data-dir: ""
 
executable IndentTest
    build-depends: HUnit -any, array ==0.4.*, base >=4.5
    main-is: RunIndentTests.hs
    buildable: True
    build-tools: alex -any, happy -any
    hs-source-dirs: src
    other-modules: MoofLexer MoofUtils PostIndent IndentParse MoofParse
 
executable Moof
    build-depends: HUnit -any, array ==0.4.*, base >=4.5
    main-is: Main.hs
    buildable: True
    build-tools: alex -any, happy -any
    hs-source-dirs: src
    other-modules: MoofLexer MoofUtils PostIndent IndentParse MoofParse
 